# todo

./: .env  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  spot.yml
.cargo/: config.toml
migrations/: 20230907141702_new.sql
migrations/2023-06-10-173423_create_task/: down.sql  up.sql
proto/: service.proto
src/: client.rs  lib.rs  main.rs  models.rs  schema.rs  server.rs  store.rs
src/cmd/: cmd.rs
src/models/: errors.rs  message.rs
src/rtui/: main.rs
src/server/: main.rs  store.rs
