[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
# main
tokio = { version = "1.29.1", features = ["full"] }
axum = { version = "0.7.4" }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = { version = "1.0.102" }
tower = { version = "0.4.13" }
tower-http = { version = "0.5.1", features = ["trace"] }
sqlx = { version = "0.7.0", features = ["runtime-tokio", "sqlite", "chrono"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
chrono = { version = "0.4.26", features = ["serde"] }
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
log = "0.4.19"
futures = "0.3.28"
rand = "0.8.5"
dotenvy = "0.15.7"
uuid = { version = "1.4.1", features = ["v4"] }

# cmd
crossterm = { version = "0.27.0" }
tui = { version = "0.19.0" }
inquire = { version = "0.6.2", features = ["crossterm", "editor"] }
reqwest = { version = "0.11.24", features = ["json"] }
colored = "2.1.0"

[[bin]]
name = "server"
path = "src/server/main.rs"

[lib]
name = "models"
path = "src/models/lib.rs"

[[bin]]
name = "cli"
path = "src/cmd/cmd.rs"
