[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
# main
tokio = { version = "1.38.0", features = ["full"] }
axum = { version = "0.7.5" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.120" }
tower = { version = "0.4.13" }
tower-http = { version = "0.5.2", features = ["trace"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "chrono"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
log = "0.4.22"
futures = "0.3.30"
rand = "0.8.5"
dotenvy = "0.15.7"
uuid = { version = "1.9.1", features = ["v4"] }

# cmd
crossterm = { version = "0.27.0" }
tui = { version = "0.19.0" }
inquire = { version = "0.7.5", features = ["crossterm", "editor"] }
reqwest = { version = "0.12.5", features = ["json"] }
colored = "2.1.0"

[[bin]]
name = "server"
path = "src/server/main.rs"

[lib]
name = "models"
path = "src/models/lib.rs"

[[bin]]
name = "cli"
path = "src/cmd/cmd.rs"
